fixed reviews card img from cutting off at the top

--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@
   }
 
   h3 {
-    @apply text-xs font-semibold sm:text-sm md:text-base lg:text-lg;
+    @apply text-xs font-semibold sm:text-sm md:text-base;
   }
 
   h5 {
@@ -81,7 +81,7 @@
   }
 
   section {
-    @apply scroll-smooth w-full px-4 py-8 sm:py-16 lg:py-32 xl:px-40;
+    @apply w-full px-4 py-8 sm:py-16 lg:py-48 xl:px-40;
   }
 
   footer {
@@ -134,10 +134,6 @@
 
   #contact p {
     @apply py-0;
-  }
-
-  #reviews h6 {
-    @apply pb-2;
   }
 
   .slider-wrapper {
